Closed
Bug 1256576
Opened 10 years ago
Closed 10 years ago
Failure to update texture size when necessary, resulting in bad painting [was: Window doesn't redraw nicely when resizing]
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox46 | --- | unaffected |
| firefox47 | --- | fixed |
| firefox48 | --- | fixed |
People
(Reporter: colin, Assigned: jfkthame)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
1.20 MB,
image/png
|
Details | |
|
994 bytes,
patch
|
snorp
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:47.0) Gecko/20100101 Firefox/47.0
Build ID: 20160314004022
Steps to reproduce:
Randomly, when resizing (making bigger) my firefox window it doesn't redraw the page nicely, leaving the new part black. When hovering over parts of the page that do something, only those parts of the page are redrawn.
This is on the latest Aurora (47.0a2 (2016-03-14))
Expected results:
Window always displays nicely.
Updated•10 years ago
|
Component: Untriaged → Graphics
Product: Firefox → Core
Comment 1•10 years ago
|
||
Thanks for the report. Could you please go to the about:support page, and then attach the provided information to this ticket. It also might be useful to know whether this is reproducible with layers.acceleration.disabled = true in about:config.
Flags: needinfo?(colin)
layers.acceleration.disabled was already set to true.
about:support information:
{
"application": {
"name": "Firefox",
"osVersion": "Darwin 14.5.0",
"arch": "x86-64",
"version": "47.0a2",
"buildID": "20160314004022",
"userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:47.0) Gecko/20100101 Firefox/47.0",
"safeMode": false,
"updateChannel": "aurora",
"supportURL": "https://support.mozilla.org/1/firefox/47.0a2/Darwin/en-US/",
"numTotalWindows": 5,
"numRemoteWindows": 0,
"remoteAutoStart": false,
"autoStartStatus": 2
},
"modifiedPreferences": {
"accessibility.typeaheadfind.flashBar": 0,
"browser.cache.disk.smart_size.first_run": false,
"browser.cache.disk.hashstats_reported": 1,
"browser.cache.disk.capacity": 358400,
"browser.cache.frecency_experiment": 3,
"browser.cache.disk.smart_size.use_old_max": false,
"browser.cache.disk.filesystem_reported": 1,
"browser.download.importedFromSqlite": true,
"browser.fixup.domainwhitelist.logout": true,
"browser.places.smartBookmarksVersion": 7,
"browser.search.useDBForOrder": true,
"browser.sessionstore.upgradeBackup.latestBuildID": "20160314004022",
"browser.startup.homepage_override.mstone": "47.0a2",
"browser.startup.homepage_override.buildID": "20160314004022",
"browser.tabs.warnOnClose": false,
"browser.tabs.remote.autostart.2": false,
"browser.urlbar.userMadeSearchSuggestionsChoice": true,
"dom.apps.reset-permissions": true,
"dom.mozApps.used": true,
"extensions.lastAppVersion": "47.0a2",
"font.internaluseonly.changed": true,
"gfx.blacklist.direct2d": 3,
"gfx.crash-guard.glcontext.deviceID": "0x0d26",
"gfx.crash-guard.glcontext.appVersion": "46.0a2",
"gfx.crash-guard.status.glcontext": 2,
"layers.acceleration.disabled": true,
"media.webrtc.debug.aec_log_dir": "/tmp/",
"media.webrtc.debug.log_file": "/tmp/WebRTC.log",
"media.gmp-gmpopenh264.lastUpdate": 1450880356,
"media.gmp-gmpopenh264.version": "1.5.3",
"media.gmp-manager.lastCheck": 1457968019,
"media.gmp-gmpopenh264.abi": "x86_64-gcc3-u-i386-x86_64",
"media.gmp-manager.buildID": "20160314004022",
"network.prefetch-next": false,
"network.http.speculative-parallel-limit": 0,
"network.predictor.cleaned-up": true,
"network.cookie.prefsMigrated": true,
"places.history.expiration.transient_current_max_pages": 104858,
"places.database.lastMaintenance": 1457720295,
"plugin.importedState": true,
"plugin.disable_full_page_plugin_for_types": "application/pdf",
"print.printer_Brother_MFC-9970CDW.print_paper_data": 0,
"print.printer_Brother_MFC-9970CDW.print_oddpages": true,
"print.printer_Brother_DCP-9270CDN.print_shrink_to_fit": true,
"print.printer_Brother_DCP-9270CDN.print_evenpages": true,
"print.print_paper_width": " 8.50",
"print.printer_Brother_MFC-9970CDW.print_footerleft": "&PT",
"print.printer_Brother_DCP-9270CDN.print_headerright": "&U",
"print.print_paper_size_unit": 0,
"print.printer_Brother_DCP-9270CDN.print_bgimages": false,
"print.print_to_file": false,
"print.printer_Brother_MFC-9970CDW.print_paper_size_type": 1,
"print.printer_Brother_MFC-9970CDW.print_shrink_to_fit": true,
"print.printer_Brother_MFC-9970CDW.print_bgimages": false,
"print.printer_Brother_DCP-9270CDN.print_unwriteable_margin_bottom": 17,
"print.print_orientation": 0,
"print.printer_Brother_MFC-9970CDW.print_margin_top": "0.5",
"print.printer_Brother_DCP-9270CDN.print_margin_left": "0.5",
"print.printer_Brother_MFC-9970CDW.print_edge_left": 0,
"print.printer_Brother_DCP-9270CDN.print_resolution": 1515870810,
"print.print_margin_top": "0.5",
"print.printer_Brother_DCP-9270CDN.print_margin_top": "0.5",
"print.printer_Brother_MFC-9970CDW.print_unwriteable_margin_bottom": 17,
"print.printer_Brother_MFC-9970CDW.print_margin_left": "0.5",
"print.printer_Brother_DCP-9270CDN.print_unwriteable_margin_left": 17,
"print.print_command": "",
"print.print_resolution_name": "",
"print.printer_Brother_DCP-9270CDN.print_paper_data": 0,
"print.print_paper_height": " 11.00",
"print.printer_Brother_DCP-9270CDN.print_to_file": false,
"print.printer_Brother_MFC-9970CDW.print_scaling": " 1.00",
"print.print_scaling": " 1.00",
"print.printer_Brother_MFC-9970CDW.print_reversed": false,
"print.printer_Brother_MFC-9970CDW.print_footercenter": "",
"print.print_unwriteable_margin_right": 17,
"print.printer_Brother_MFC-9970CDW.print_margin_right": "0.5",
"print.printer_Brother_MFC-9970CDW.print_headercenter": "",
"print.printer_Brother_MFC-9970CDW.print_duplex": 1515870810,
"print.print_reversed": false,
"print.printer_Brother_DCP-9270CDN.print_headerleft": "&T",
"print.printer_Brother_DCP-9270CDN.print_footerleft": "&PT",
"print.print_unwriteable_margin_left": 17,
"print.printer_Brother_MFC-9970CDW.print_resolution": 1515870810,
"print.printer_Brother_DCP-9270CDN.print_headercenter": "",
"print.printer_Brother_DCP-9270CDN.print_scaling": " 1.00",
"print.printer_Brother_DCP-9270CDN.print_margin_right": "0.5",
"print.print_paper_data": 0,
"print.print_plex_name": "",
"print.printer_Brother_DCP-9270CDN.print_bgcolor": false,
"print.printer_Brother_DCP-9270CDN.print_paper_width": " 8.50",
"print.printer_Brother_MFC-9970CDW.print_unwriteable_margin_top": 17,
"print.printer_Brother_DCP-9270CDN.print_edge_top": 0,
"print.print_resolution": 1515870810,
"print.printer_Brother_DCP-9270CDN.print_edge_right": 0,
"print.printer_Brother_DCP-9270CDN.print_margin_bottom": "0.5",
"print.printer_Brother_DCP-9270CDN.print_paper_size_type": 1,
"print.print_unwriteable_margin_bottom": 17,
"print.print_paper_name": "",
"print.printer_Brother_DCP-9270CDN.print_edge_left": 0,
"print.printer_Brother_DCP-9270CDN.print_paper_height": " 11.00",
"print.printer_Brother_DCP-9270CDN.print_footerright": "&D",
"print.printer_Brother_MFC-9970CDW.print_page_delay": 50,
"print.printer_Brother_MFC-9970CDW.print_paper_height": " 11.00",
"print.printer_Brother_MFC-9970CDW.print_margin_bottom": "0.5",
"print.printer_Brother_DCP-9270CDN.print_duplex": 1515870810,
"print.print_oddpages": true,
"print.printer_Brother_DCP-9270CDN.print_unwriteable_margin_top": 17,
"print.printer_Brother_DCP-9270CDN.print_in_color": true,
"print.printer_Brother_DCP-9270CDN.print_edge_bottom": 0,
"print.printer_Brother_MFC-9970CDW.print_evenpages": true,
"print.printer_Brother_MFC-9970CDW.print_in_color": true,
"print.printer_Brother_MFC-9970CDW.print_orientation": 0,
"print.printer_Brother_DCP-9270CDN.print_reversed": false,
"print.print_bgimages": false,
"print.print_downloadfonts": false,
"print.print_duplex": 1515870810,
"print.printer_Brother_MFC-9970CDW.print_headerright": "&U",
"print.printer_Brother_MFC-9970CDW.print_to_file": false,
"print.printer_Brother_DCP-9270CDN.print_oddpages": true,
"print.print_evenpages": true,
"print.printer_Brother_DCP-9270CDN.print_orientation": 0,
"print.printer_Brother_DCP-9270CDN.print_footercenter": "",
"print.print_margin_left": "0.5",
"print.printer_Brother_MFC-9970CDW.print_unwriteable_margin_left": 17,
"print.printer_Brother_MFC-9970CDW.print_paper_size_unit": 0,
"print.printer_Brother_MFC-9970CDW.print_unwriteable_margin_right": 17,
"print.printer_Brother_MFC-9970CDW.print_edge_bottom": 0,
"print.print_colorspace": "",
"print.print_shrink_to_fit": true,
"print.printer_Brother_MFC-9970CDW.print_paper_width": " 8.50",
"print.printer_Brother_DCP-9270CDN.print_paper_name": "",
"print.print_margin_right": "0.5",
"print.printer_Brother_DCP-9270CDN.print_paper_size_unit": 0,
"print.print_unwriteable_margin_top": 17,
"print.printer_Brother_MFC-9970CDW.print_edge_top": 0,
"print.printer_Brother_MFC-9970CDW.print_paper_name": "",
"print.print_bgcolor": false,
"print.printer_Brother_MFC-9970CDW.print_footerright": "&D",
"print.print_margin_bottom": "0.5",
"print.print_in_color": true,
"print.print_paper_size_type": 1,
"print.print_page_delay": 50,
"print.printer_Brother_MFC-9970CDW.print_bgcolor": false,
"print.printer_Brother_DCP-9270CDN.print_unwriteable_margin_right": 17,
"print.printer_Brother_DCP-9270CDN.print_page_delay": 50,
"print.printer_Brother_MFC-9970CDW.print_edge_right": 0,
"print.printer_Brother_MFC-9970CDW.print_headerleft": "&T",
"privacy.sanitize.timeSpan": 0,
"privacy.sanitize.migrateClearSavedPwdsOnExit": true,
"privacy.cpd.downloads": false,
"privacy.cpd.sessions": false,
"privacy.cpd.cookies": false,
"privacy.trackingprotection.enabled": true,
"privacy.trackingprotection.introCount": 20,
"privacy.cpd.history": false,
"privacy.cpd.cache": false,
"privacy.sanitize.migrateFx3Prefs": true,
"security.OCSP.enabled": 0,
"security.tls.insecure_fallback_hosts": "mdb.migros.net,transfer.migros.net,git.migros.net,192.168.99.1,intranet.migros.net",
"security.default_personal_cert": "Select Automatically",
"security.disable_button.openDeviceManager": false,
"security.tls.unrestricted_rc4_fallback": true,
"security.disable_button.openCertManager": false,
"services.sync.declinedEngines": "prefs,addons",
"services.sync.lastPing": 1458037923,
"services.sync.lastSync": "Tue Mar 15 2016 11:52:11 GMT+0100 (CET)",
"services.sync.numClients": 2,
"services.sync.engine.prefs": false,
"services.sync.engine.addons": false,
"services.sync.engine.prefs.modified": false,
"storage.vacuum.last.index": 1,
"storage.vacuum.last.places.sqlite": 1457347257
},
"lockedPreferences": {},
"javaScript": {
"incrementalGCEnabled": true
},
"accessibility": {
"isActive": false,
"forceDisabled": 0
},
"libraryVersions": {
"NSPR": {
"minVersion": "4.12",
"version": "4.12"
},
"NSS": {
"minVersion": "3.23 Basic ECC",
"version": "3.23 Basic ECC"
},
"NSSUTIL": {
"minVersion": "3.23",
"version": "3.23"
},
"NSSSSL": {
"minVersion": "3.23 Basic ECC",
"version": "3.23 Basic ECC"
},
"NSSSMIME": {
"minVersion": "3.23 Basic ECC",
"version": "3.23 Basic ECC"
}
},
"userJS": {
"exists": false
},
"crashes": {
"submitted": [],
"pending": 0
},
"extensions": [
{
"name": "1Password",
"version": "4.5.4",
"isActive": true,
"id": "onepassword4@agilebits.com"
},
{
"name": "ADB Helper",
"version": "0.8.7",
"isActive": true,
"id": "adbhelper@mozilla.org"
},
{
"name": "Boomerang for Gmail",
"version": "1.2.6",
"isActive": true,
"id": "{65e41d20-f092-41b7-bb83-c6e8a9ab0f57}"
},
{
"name": "BuiltWith",
"version": "1.9.6.1-signed",
"isActive": true,
"id": "gary@builtwith.com"
},
{
"name": "Charles Proxy Auto-configuration",
"version": "3.11",
"isActive": true,
"id": "{3e9a3920-1b27-11da-8cd6-0800200c9a66}"
},
{
"name": "Firefox Hello Beta",
"version": "1.1.11",
"isActive": true,
"id": "loop@mozilla.org"
},
{
"name": "HTTPS-Everywhere",
"version": "5.1.4",
"isActive": true,
"id": "https-everywhere-eff@eff.org"
},
{
"name": "JSON-DataView",
"version": "1.18.1-signed",
"isActive": true,
"id": "moz-json-data-view@warren-bank.github.com"
},
{
"name": "LastPass",
"version": "3.3.1",
"isActive": true,
"id": "support@lastpass.com"
},
{
"name": "Multi-process staged rollout",
"version": "1.0",
"isActive": true,
"id": "e10srollout@mozilla.org"
},
{
"name": "Pocket",
"version": "1.0",
"isActive": true,
"id": "firefox@getpocket.com"
},
{
"name": "Pushbullet",
"version": "316",
"isActive": true,
"id": "jid1-BYcQOfYfmBMd9A@jetpack"
},
{
"name": "SearchLoad Options",
"version": "0.8.0.1-signed",
"isActive": true,
"id": "searchloadoptions@esteban.torres"
},
{
"name": "Show Anchors 2",
"version": "1.12.1-signed",
"isActive": true,
"id": "show-anchors-2@stefanheule.com"
},
{
"name": "uBlock Origin",
"version": "1.6.4",
"isActive": true,
"id": "uBlock0@raymondhill.net"
},
{
"name": "Valence",
"version": "0.3.5",
"isActive": true,
"id": "fxdevtools-adapters@mozilla.org"
}
],
"experiments": [
{
"id": "e10s-enabled-aurora-20151020@experiments.mozilla.org",
"name": "Multi-process Firefox A/B Test",
"description": "Measure the effect of multi-process Firefox",
"active": false,
"endDate": 1446364522328,
"detailURL": "",
"branch": "user-disabled"
}
],
"graphics": {
"numTotalWindows": 4,
"numAcceleratedWindows": 0,
"windowLayerManagerType": "Basic",
"windowLayerManagerRemote": true,
"supportsHardwareH264": "Yes",
"numAcceleratedWindowsMessage": [
""
],
"adapterDescription": "",
"adapterVendorID": "0x8086",
"adapterDeviceID": "0x0d26",
"adapterRAM": "",
"adapterDrivers": "",
"driverVersion": "",
"driverDate": "",
"webglRenderer": "Intel Inc. -- Intel Iris Pro OpenGL Engine",
"info": {
"AzureCanvasBackend": "skia",
"AzureCanvasAccelerated": 1,
"AzureFallbackCanvasBackend": "none",
"AzureContentBackend": "quartz"
}
}
}
Flags: needinfo?(colin)
Actually, setting layers.acceleration.disabled to false seems to stop it from happening.
Comment 4•10 years ago
|
||
Did this occur on previous versions of firefox, or is it a regression in 47? If it is a regression, would you be able to find the regression range using the mozregression tool? https://mozilla.github.io/mozregression/
Flags: needinfo?(colin)
| Assignee | ||
Comment 5•10 years ago
|
||
Hmm, I think this is the same problem I just filed as bug 1258417. As noted there, it occurs if hardware acceleration is disabled, when the width of a window is resized past a 512-px multiple where the window was originally created smaller than that threshold.
Confirming this; I'll dupe my newly-filed bug to this one.
I believe this is a fairly recent regression (between 46 and 47); I'll see if I can get a better range.
| Assignee | ||
Comment 7•10 years ago
|
||
I ran mozregression, and it pointed me at:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=15b761835183778c29def19e8f8136d0b1e95d57&tochange=456ca897229f57deee86b41f3658d97249f2d668
as the regression range.
Of the three bugs there, only bug 1243418 seems like it should have any potential effect on behavior; AIUI, the others are just about reporting.
I confirmed that backing out cset 866edb59ba09 (bug 1243418) from my local build fixes this.
| Assignee | ||
Comment 8•10 years ago
|
||
Looks like this check got lost during the rearrangement in bug 1243418. With this patch, I can no longer reproduce the problem here.
Attachment #8733781 -
Flags: review?(snorp)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Comment 9•10 years ago
|
||
Comment on attachment 8733781 [details] [diff] [review]
Make sure texture is (re)initialized if the size changed
Review of attachment 8733781 [details] [diff] [review]:
-----------------------------------------------------------------
Whoops, nice catch!
Attachment #8733781 -
Flags: review?(snorp) → review+
| Assignee | ||
Comment 10•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/e2914c063e387723b45f31b5b81bb8c6ba49b1b1
Bug 1256576 - Make sure texture is (re)initialized if the size changed. r=snorp
| Assignee | ||
Comment 11•10 years ago
|
||
Comment on attachment 8733781 [details] [diff] [review]
Make sure texture is (re)initialized if the size changed
Approval Request Comment
[Feature/regressing bug #]: bug 1243418
[User impact if declined]: broken rendering after resizing window with HWA disabled on OS X
[Describe test coverage new/current, TreeHerder]: tested manually (requires hardware acceleration disabled)
[Risks and why]: minimal, one-liner to restore the dropped 'needInit' setting
[String/UUID change made/needed]: none
Flags: needinfo?(snorp)
Flags: needinfo?(colin)
Attachment #8733781 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Updated•10 years ago
|
status-firefox46:
--- → unaffected
status-firefox47:
--- → affected
status-firefox48:
--- → affected
Comment 13•10 years ago
|
||
Comment on attachment 8733781 [details] [diff] [review]
Make sure texture is (re)initialized if the size changed
Help with fix for 2nd monitor support, please uplift to aurora
Attachment #8733781 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 14•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Comment 15•10 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Updated•10 years ago
|
Summary: Window doesn't redraw nicely when resizing → Failure to update texture size when necessary, resulting in bad painting [was: Window doesn't redraw nicely when resizing]
You need to log in
before you can comment on or make changes to this bug.
Description
•