Bug 1256576 - Make sure texture is (re)initialized if the size changed. r=snorp